# pneumaticarm7R

./: CMakeLists.txt  README.md  pressureforcesensor_reading.txt
application/: CMakeLists.txt  main_controleur.cpp  pneumatictest01.cpp  test_ncurses_ui.cpp  test_pneumaticarm7R.cpp
include/: #actionneur.h#  CIODAC16.h  CIODAC16.hh  CIODAS64.h  CIODAS64.hh  I_teleop.h  MPCcontroller.hh  actionneur.h  actionneur.h~  actuator.hh  capteur.h  capteur.h~  capteur_position.h  capteur_position.h~  capture.hh  card.hh  carte.h  carte.h~  clientudp3.h  clientudp3.hh  config.h  controleur_axe.h  controleur_axe.hh  controleur_outil.h  controller.hh  controller_axis.hh  controller_tool.hh  costfunction.h  costfunctionpneumaticarmelbow.h  debug.hh  debug.hh~  dynamicmodel.h  fichier.h  ilqrsolver.h  integrate_dynamics.hh  ioboards.hh  joystick.h  main_controleur.h  main_controleur.hh  modele.h  (+18 more)
src/: #controller.cpp#  4:q  CIODAC16.cpp  CIODAS64.cpp  CMakeLists.txt  CMakeLists.txt~  I_teleop.cpp  MPCcontroller.cpp  actionneur.cpp  actuator.cpp  capteur.cpp  capteur_position.cpp  clientudp3.cpp  controleur_axe.cpp  controleur_outil.cpp  controller.cpp  controller_axis.cpp  controller_tool.cpp  costfunctionpneumaticarmelbow.cpp  fichier.cpp  ilqrsolver.cpp  joystick.cpp  main_controleur.cpp  main_controleur.cpp~  modele.cpp  muscle.cpp  muscle.cpp~  ncurses_ui.cpp  old_main_controller.cpp  pneumatic_7arm_rt_thread.cpp  pneumaticarm3ordermodel.cpp  pneumaticarm3rdordermodel.cpp  pneumaticarm_2linkmodel.cpp  pneumaticarm_model.cpp  pneumaticarm_model.m  pneumaticarm_nonsymmetricmodel.cpp  pneumaticarmelbow2ndordermodel.cpp  pneumaticarmelbowlinear.cpp  pneumaticarmnonlinearmodel.cpp  pneumaticsarm_modelsimulink  (+7 more)
